fix: add type to css link, fix menu behavior when displaying on small screen

--- a/styles.css
+++ b/styles.css
@@ -27,10 +27,7 @@ body {
 .navigation {
   margin: 0;
   padding: 0;
-  height: 15vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  min-height: 15vh;
 }
 
 .main-content {
